--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "calculator",
+  "name": "Calculator",
   "version": "0.1.0",
+  "homepage": "https://Dannymak1993.github.io/Calculator",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
